"Layout" workspace in attached file seems corrupted. The option to split panel is gone, and menus open but don't close! #84780

Closed
opened 2021-01-16 14:13:10 +01:00 by Dave F · 10 comments

{F9581879}System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: 0f45cab862
Worked: Well, never seen this before! I was using a wacom/cintiq on windows in dual screen setup, with blender set to full screen, and had just used the 'rotate view in 2D' shortcut when I noticed the issue.

Short description of error
Something seems to have become corrupted with this workspace. Panels can't be split, and when it's duplicated, UI doesn't update properly - menus that have been opened don't close (see video), changing workspace doesn't change, dialog boxes don't disappear!

Exact steps for others to reproduce the error
Load the attached file. Notice it doesn't have the option to split the panes in the tab named Layout. Duplicate the tab named Layout. Try the menus and dialog boxes. They open but don't close! Also, switching to the newly duplicated workspace doesn't actually change the workspace, it just keeps whatever workspace was there before! blender ui bug 2021-01-16 12-56-35.mp4.

{[F9581879](https://archive.blender.org/developer/F9581879/blender_ui_bug.zip)}**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: TITAN X (Pascal)/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.91.0, branch: master, commit date: 2020-11-25 08:34, hash: `0f45cab862` Worked: Well, never seen this before! I was using a wacom/cintiq on windows in dual screen setup, with blender set to full screen, and had just used the 'rotate view in 2D' shortcut when I noticed the issue. **Short description of error** Something seems to have become corrupted with this workspace. Panels can't be split, and when it's duplicated, UI doesn't update properly - menus that have been opened don't close (see video), changing workspace doesn't change, dialog boxes don't disappear! **Exact steps for others to reproduce the error** Load the attached file. Notice it doesn't have the option to split the panes in the tab named Layout. Duplicate the tab named Layout. Try the menus and dialog boxes. They open but don't close! Also, switching to the newly duplicated workspace doesn't actually change the workspace, it just keeps whatever workspace was there before! [blender ui bug 2021-01-16 12-56-35.mp4](https://archive.blender.org/developer/F9581880/blender_ui_bug_2021-01-16_12-56-35.mp4).
Author

Added subscriber: @df-1

Added subscriber: @df-1

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

It's as if it's maximized (ctrl+alt+space maximized, the characteristic icon appears when hovering over top right corner), but at the same time isn't, since header and main bar are visible.

It's as if it's maximized (ctrl+alt+space maximized, the characteristic icon appears when hovering over top right corner), but at the same time isn't, since header and main bar are visible.

Added subscriber: @rjg

Added subscriber: @rjg

I can reproduce this on Linux as well. ASAN doesn't report any errors.

I can reproduce this on Linux as well. ASAN doesn't report any errors.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 5c72a4d452

This issue was referenced by 5c72a4d45269638c7a8f72151db6cfd2b8895c35
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Error is in screen code. That just causes other issues like the observed graphical glitches.

Error is in screen code. That just causes other issues like the observed graphical glitches.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2021-02-01 12:48:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84780
No description provided.